-Added UI Theme and Logo Type to the Options screen -Fixed pointer velocity being unstable depending on the framerate, being very slow when the game is paused -Fixed merging issues

--- a/game/assets/lang/en_us.json
+++ b/game/assets/lang/en_us.json
@@ -1,75 +1,75 @@
 {
-  "legacy.loadingTip.C418": "Music by C418!",
-  "legacy.loadingTip.animalDespawn": "If an animal can't move more than 20 blocks in any direction, it won't despawn.",
-  "legacy.loadingTip.auMinecon": "Were you at Minecon?",
-  "legacy.loadingTip.bonemeal": "Bonemeal (crafted from a skeleton bone) can be used as a fertilizer, and can make things grow instantly!",
-  "legacy.loadingTip.bugs": "Do not look directly at the bugs.",
-  "legacy.loadingTip.cactus": "Cook cactus in a furnace to get green dye.",
-  "legacy.loadingTip.charcoal": "If you can't find any coal for your torches, you can always make charcoal from trees in a furnace.",
-  "legacy.loadingTip.chickenDuck": "Is it a chicken or is it a duck?",
-  "legacy.loadingTip.chickenEgg": "Chickens lay an egg every 5-10 minutes.",
-  "legacy.loadingTip.cookedPorkchop": "Eating cooked pork chops gives more health than eating raw pork chops.",
-  "legacy.loadingTip.coop": "Connect extra controllers to your computer and press %s on them to join a game at any point.",
-  "legacy.loadingTip.cowArmor": "Harvest leather from cows, and use it to make armor.",
-  "legacy.loadingTip.createObsidian": "Obsidian is created when water hits a lava source block.",
-  "legacy.loadingTip.creeperBorn": "Creepers were born from a coding bug.",
-  "legacy.loadingTip.creeperPowder": "Creepers are the easiest obtainable source of gunpowder.",
-  "legacy.loadingTip.deadmau5": "deadmau5 likes Minecraft!",
-  "legacy.loadingTip.digObsidian": "Obsidian can only be mined with a diamond or diamond pickaxe.",
-  "legacy.loadingTip.diggingDown": "Digging straight down or straight up is not a great idea.",
-  "legacy.loadingTip.diggingSoil": "Digging soil or sand with a spade is faster than with your hand!",
-  "legacy.loadingTip.emptyBucket": "If you have an empty bucket, you can fill it with milk from a cow, or water, or lava!",
-  "legacy.loadingTip.famousNotch": "Notch has over three million followers on twitter!",
-  "legacy.loadingTip.gameUpdate": "There will be an update to this game eventually!",
-  "legacy.loadingTip.gamma": "Alter the gamma settings to make the game brighter or darker.",
-  "legacy.loadingTip.ghastCobblestone": "Cobblestone is resistant to Ghast fireballs, making it useful for guarding portals.",
-  "legacy.loadingTip.ghastFireball": "Hit those fireballs back at the Ghast!",
-  "legacy.loadingTip.hoe": "Use a hoe to prepare areas of ground for planting.",
-  "legacy.loadingTip.junkboysFace": "No-one at Mojang has ever seen junkboy's face.",
-  "legacy.loadingTip.largeChest": "Placing two chests side by side will make one large chest.",
-  "legacy.loadingTip.lavaSmelt": "A single bucket of lava can be used in a furnace to smelt 100 blocks.",
-  "legacy.loadingTip.legacyInfo": "You'll get the latest info on this game from minecraft.net!",
-  "legacy.loadingTip.lightMelt": "Blocks that can be used as a light source will melt snow and ice. This includes torches, glowstone, and Jack O'Lanterns.",
-  "legacy.loadingTip.minecart": "Get to destinations faster with a minecart and rail!",
-  "legacy.loadingTip.mineconCalifornia": "Minecon 2016 was in Anaheim, California, USA!",
-  "legacy.loadingTip.mineconLasVegas": "Minecon 2011 was in Las Vegas, Nevada, USA!",
-  "legacy.loadingTip.mineconLondon": "Minecon 2015 was in London, UK!",
-  "legacy.loadingTip.mineconParis": "Minecon 2012 was in Paris, France!",
-  "legacy.loadingTip.minecraftFamous": "Some famous people play Minecraft!",
-  "legacy.loadingTip.minecraftForum": "minecraftforum has a section dedicated to the Java Edition.",
-  "legacy.loadingTip.minecraftRecords": "Java Edition broke lots of records!",
-  "legacy.loadingTip.minecraftWiki": "Did you know there's a Minecraft Wiki?",
-  "legacy.loadingTip.mojangAwards": "Mojang has more awards than staff!",
-  "legacy.loadingTip.mojangOffice": "Mojang's new office is cool!",
-  "legacy.loadingTip.netherPortal": "Building a portal will allow you to travel to another dimension - The Nether.",
-  "legacy.loadingTip.neutralMobs": "Attacking a wolf will cause any wolves in the immediate vicinity to turn hostile and attack you. This trait is also shared by Zombie Pigmans.",
-  "legacy.loadingTip.neutralPigman": "Zombie Pigmans won't attack you, unless you attack them.",
-  "legacy.loadingTip.neutralSpiders": "Spiders won't attack you during the day - unless you attack them.",
-  "legacy.loadingTip.noteBlockInstrument": "The instrument played by a note block depends on the material beneath it.",
-  "legacy.loadingTip.ohCreeper": "Creepers explode when they get close to you!",
-  "legacy.loadingTip.party": ".party() was excellent!",
-  "legacy.loadingTip.peaceful": "If you set the game difficulty to Peaceful no monsters will come out at night!",
-  "legacy.loadingTip.porkchop": "Harvest pork chops from pigs, and cook and eat them to regain health.",
-  "legacy.loadingTip.removedHerobrine": "We think Mojang has removed Herobrine from the Java Edition, but we're not too sure.",
-  "legacy.loadingTip.rightTool": "Use the right tool for the job!",
-  "legacy.loadingTip.rumors": "Always assume rumors are false, rather than assuming they're true!",
-  "legacy.loadingTip.saplingGrow": "Plant some saplings and they'll grow into trees.",
-  "legacy.loadingTip.sleepingBed": "Sleeping in a bed at night will fast forward the game to dawn, but all players in a multiplayer game need to sleep in beds at the same time.",
-  "legacy.loadingTip.slowLava": "Lava can take minutes to disappear COMPLETELY when the source block is removed.",
-  "legacy.loadingTip.spawnPoint": "You can change your game spawn point and skip to dawn by sleeping in a bed.",
-  "legacy.loadingTip.stackableFences": "Stackable fences are in the game now!",
-  "legacy.loadingTip.swedishCuriosity": "Not all Swedish people have blonde hair. Some, like Jens from Mojang, even have ginger hair!",
-  "legacy.loadingTip.torches": "Make some torches to light up areas at night. Monsters will avoid the areas around these torches.",
-  "legacy.loadingTip.undeadMobs": "Zombies and Skeletons can survive daylight if they are in water.",
-  "legacy.loadingTip.unknownMinecon": "No-one can remember where Minecon 2014 was held.",
-  "legacy.loadingTip.updateInfo": "Read the What's New section in the How To Play menus to see the latest update information about the game.",
-  "legacy.loadingTip.whoNotch": "Who is Notch?",
-  "legacy.loadingTip.wolfCreeper": "Wolves won't attack Creepers.",
-  "legacy.loadingTip.wolfTail": "Tame wolves show their health with the position of their tail. Feed them meat to heal them.",
-  "legacy.loadingTip.wolfTame": "Feed a bone to a wolf to tame it. You can then make it sit or follow you.",
-  "legacy.loadingTip.woolFire": "Take caution when building structures made of wool in open air, as lightning from thunderstorms can set wool on fire.",
-  "legacy.initializing": "Initializing server",
-  "legacy.loading_spawn_area": "Loading spawn area",
+    "legacy.loadingTip.C418": "Music by C418!",
+    "legacy.loadingTip.animalDespawn": "If an animal can't move more than 20 blocks in any direction, it won't despawn.",
+    "legacy.loadingTip.auMinecon": "Were you at Minecon?",
+    "legacy.loadingTip.bonemeal": "Bonemeal (crafted from a skeleton bone) can be used as a fertilizer, and can make things grow instantly!",
+    "legacy.loadingTip.bugs": "Do not look directly at the bugs.",
+    "legacy.loadingTip.cactus": "Cook cactus in a furnace to get green dye.",
+    "legacy.loadingTip.charcoal": "If you can't find any coal for your torches, you can always make charcoal from trees in a furnace.",
+    "legacy.loadingTip.chickenDuck": "Is it a chicken or is it a duck?",
+    "legacy.loadingTip.chickenEgg": "Chickens lay an egg every 5-10 minutes.",
+    "legacy.loadingTip.cookedPorkchop": "Eating cooked pork chops gives more health than eating raw pork chops.",
+    "legacy.loadingTip.coop": "Connect extra controllers to your computer and press %s on them to join a game at any point.",
+    "legacy.loadingTip.cowArmor": "Harvest leather from cows, and use it to make armor.",
+    "legacy.loadingTip.createObsidian": "Obsidian is created when water hits a lava source block.",
+    "legacy.loadingTip.creeperBorn": "Creepers were born from a coding bug.",
+    "legacy.loadingTip.creeperPowder": "Creepers are the easiest obtainable source of gunpowder.",
+    "legacy.loadingTip.deadmau5": "deadmau5 likes Minecraft!",
+    "legacy.loadingTip.digObsidian": "Obsidian can only be mined with a diamond or diamond pickaxe.",
+    "legacy.loadingTip.diggingDown": "Digging straight down or straight up is not a great idea.",
+    "legacy.loadingTip.diggingSoil": "Digging soil or sand with a spade is faster than with your hand!",
+    "legacy.loadingTip.emptyBucket": "If you have an empty bucket, you can fill it with milk from a cow, or water, or lava!",
+    "legacy.loadingTip.famousNotch": "Notch has over three million followers on twitter!",
+    "legacy.loadingTip.gameUpdate": "There will be an update to this game eventually!",
+    "legacy.loadingTip.gamma": "Alter the gamma settings to make the game brighter or darker.",
+    "legacy.loadingTip.ghastCobblestone": "Cobblestone is resistant to Ghast fireballs, making it useful for guarding portals.",
+    "legacy.loadingTip.ghastFireball": "Hit those fireballs back at the Ghast!",
+    "legacy.loadingTip.hoe": "Use a hoe to prepare areas of ground for planting.",
+    "legacy.loadingTip.junkboysFace": "No-one at Mojang has ever seen junkboy's face.",
+    "legacy.loadingTip.largeChest": "Placing two chests side by side will make one large chest.",
+    "legacy.loadingTip.lavaSmelt": "A single bucket of lava can be used in a furnace to smelt 100 blocks.",
+    "legacy.loadingTip.legacyInfo": "You'll get the latest info on this game from minecraft.net!",
+    "legacy.loadingTip.lightMelt": "Blocks that can be used as a light source will melt snow and ice. This includes torches, glowstone, and Jack O'Lanterns.",
+    "legacy.loadingTip.minecart": "Get to destinations faster with a minecart and rail!",
+    "legacy.loadingTip.mineconCalifornia": "Minecon 2016 was in Anaheim, California, USA!",
+    "legacy.loadingTip.mineconLasVegas": "Minecon 2011 was in Las Vegas, Nevada, USA!",
+    "legacy.loadingTip.mineconLondon": "Minecon 2015 was in London, UK!",
+    "legacy.loadingTip.mineconParis": "Minecon 2012 was in Paris, France!",
+    "legacy.loadingTip.minecraftFamous": "Some famous people play Minecraft!",
+    "legacy.loadingTip.minecraftForum": "minecraftforum has a section dedicated to the Java Edition.",
+    "legacy.loadingTip.minecraftRecords": "Java Edition broke lots of records!",
+    "legacy.loadingTip.minecraftWiki": "Did you know there's a Minecraft Wiki?",
+    "legacy.loadingTip.mojangAwards": "Mojang has more awards than staff!",
+    "legacy.loadingTip.mojangOffice": "Mojang's new office is cool!",
+    "legacy.loadingTip.netherPortal": "Building a portal will allow you to travel to another dimension - The Nether.",
+    "legacy.loadingTip.neutralMobs": "Attacking a wolf will cause any wolves in the immediate vicinity to turn hostile and attack you. This trait is also shared by Zombie Pigmans.",
+    "legacy.loadingTip.neutralPigman": "Zombie Pigmans won't attack you, unless you attack them.",
+    "legacy.loadingTip.neutralSpiders": "Spiders won't attack you during the day - unless you attack them.",
+    "legacy.loadingTip.noteBlockInstrument": "The instrument played by a note block depends on the material beneath it.",
+    "legacy.loadingTip.ohCreeper": "Creepers explode when they get close to you!",
+    "legacy.loadingTip.party": ".party() was excellent!",
+    "legacy.loadingTip.peaceful": "If you set the game difficulty to Peaceful no monsters will come out at night!",
+    "legacy.loadingTip.porkchop": "Harvest pork chops from pigs, and cook and eat them to regain health.",
+    "legacy.loadingTip.removedHerobrine": "We think Mojang has removed Herobrine from the Java Edition, but we're not too sure.",
+    "legacy.loadingTip.rightTool": "Use the right tool for the job!",
+    "legacy.loadingTip.rumors": "Always assume rumors are false, rather than assuming they're true!",
+    "legacy.loadingTip.saplingGrow": "Plant some saplings and they'll grow into trees.",
+    "legacy.loadingTip.sleepingBed": "Sleeping in a bed at night will fast forward the game to dawn, but all players in a multiplayer game need to sleep in beds at the same time.",
+    "legacy.loadingTip.slowLava": "Lava can take minutes to disappear COMPLETELY when the source block is removed.",
+    "legacy.loadingTip.spawnPoint": "You can change your game spawn point and skip to dawn by sleeping in a bed.",
+    "legacy.loadingTip.stackableFences": "Stackable fences are in the game now!",
+    "legacy.loadingTip.swedishCuriosity": "Not all Swedish people have blonde hair. Some, like Jens from Mojang, even have ginger hair!",
+    "legacy.loadingTip.torches": "Make some torches to light up areas at night. Monsters will avoid the areas around these torches.",
+    "legacy.loadingTip.undeadMobs": "Zombies and Skeletons can survive daylight if they are in water.",
+    "legacy.loadingTip.unknownMinecon": "No-one can remember where Minecon 2014 was held.",
+    "legacy.loadingTip.updateInfo": "Read the What's New section in the How To Play menus to see the latest update information about the game.",
+    "legacy.loadingTip.whoNotch": "Who is Notch?",
+    "legacy.loadingTip.wolfCreeper": "Wolves won't attack Creepers.",
+    "legacy.loadingTip.wolfTail": "Tame wolves show their health with the position of their tail. Feed them meat to heal them.",
+    "legacy.loadingTip.wolfTame": "Feed a bone to a wolf to tame it. You can then make it sit or follow you.",
+    "legacy.loadingTip.woolFire": "Take caution when building structures made of wool in open air, as lightning from thunderstorms can set wool on fire.",
+    "legacy.initializing": "Initializing server",
+    "legacy.loading_spawn_area": "Loading spawn area",
     "options.thirdPerson": "Third Person View",
     "options.fancyGraphics": "Fancy Graphics",
     "options.blockOutlines": "Block Outlines",
@@ -85,5 +85,16 @@
     "options.debugText": "Debug Text",
     "options.2dTitleLogo": "2D Title Logo",
     "options.menuPanorama": "Menu Panorama",
+    "options.uiTheme": "UI Theme",
+    "options.uiTheme.pocket": "Pocket",
+    "options.uiTheme.java": "Java",
+    "options.uiTheme.console": "Console",
+    "options.logoType": "Logo Type",
+    "options.logoType.auto": "Auto",
+    "options.logoType.pocket": "Pocket",
+    "options.logoType.java": "Java",
+    "options.logoType.console": "Console",
+    "options.logoType.xbox360": "Xbox 360",
+    "options.hudSize": "HUD Size",
     "options.value": "%s: %s"
 }
