-Added Console Play Game screen (the start game screen buttons weren't changed tho) -Changed `consolegui` dir to `gui/console` -Fixed Console UI buttons not allowing shader colors

--- a/game/assets/lang/en_us.json
+++ b/game/assets/lang/en_us.json
@@ -106,5 +106,11 @@
     "settingsMenu.controls": "Controls",
     "settingsMenu.settings": "Settings",
     "settingsMenu.credits": "Credits",
-    "settingsMenu.resetToDefaults": "Reset To Defaults"
+    "settingsMenu.resetToDefaults": "Reset To Defaults",
+    "playGame.start": "Start Game",
+    "playGame.join": "Join Game",
+    "playGame.createNewWorld": "Create New World",
+    "playGame.tutorial": "Play Tutorial",
+    "playGame.joinButton": "%s's Game",
+    "playGame.noGamesFound": "No Games Found"
 }
