-Added splashes manager, now the splashes will be read from `title/splashes.txt` -Added Console Main screen, replacing the Start Game screen with Console UI Theme -Added Console Pause screen, replacing the ´Pause screen with Console UI Theme -Added Console Create World Screen -Fixed logo rendering not updating when changing the UI Mode -Fixed some artifacts with Console UI scaling in 1080p -Fixed Vertical Layout doing cyclic movement sometimes when trying to scroll down -Fixed Vertical Layout scroll positioning

--- a/game/assets/lang/en_us.json
+++ b/game/assets/lang/en_us.json
@@ -102,6 +102,12 @@
     "options.difficulty.easy.desc": "In this mode, enemies spawn in the environment, but will do less damage to the player than in the Normal mode.",
     "options.difficulty.normal.desc": "In this mode, enemies spawn in the environment, and will do a standard amount of damage to the player.",
     "options.difficulty.hard.desc": "In this mode, enemies will spawn in the environment, and will do a great deal of damage to the player. Watch out for the Creepers too, since they are unlikely to cancel their exploding attack when you move away from them!",
+    "mainMenu.playGame": "Play Game",
+    "mainMenu.leaderboards": "Leaderboards",
+    "mainMenu.achievements": "Achievements",
+    "mainMenu.helpAndOptions": "Help & Options",
+    "mainMenu.download": "Download Content",
+    "mainMenu.exitGame": "Exit Game",
     "settingsMenu.howToPlay": "How To Play",
     "settingsMenu.controls": "Controls",
     "settingsMenu.settings": "Settings",
@@ -112,5 +118,9 @@
     "playGame.createNewWorld": "Create New World",
     "playGame.tutorial": "Play Tutorial",
     "playGame.joinButton": "%s's Game",
-    "playGame.noGamesFound": "No Games Found"
+    "playGame.noGamesFound": "No Games Found",
+    "playGame.online": "Online game",
+    "playGame.inviteOnly": "Invite only",
+    "pauseMenu.resume": "Resume Game",
+    "pauseMenu.saveGame": "Save Game"
 }
