Xbox 360 / Console Bug Fixes * Added 720p fallback resolution for Direct3D 9 device initialization. This fixes crashes that would occur when launching the game in 1080p on the Xbox 360. * Added a hack to fix screens being shrunk infinitely when using Java screen scaling with the Cconsole UI theme. * Removed gameTips.animalFollow from tips, since the localization string was missing

--- a/game/assets/lang/en_us.json
+++ b/game/assets/lang/en_us.json
@@ -28,7 +28,7 @@
     "loadingTip.junkboysFace": "No-one at Mojang has ever seen junkboy's face.",
     "loadingTip.largeChest": "Placing two chests side by side will make one large chest.",
     "loadingTip.lavaSmelt": "A single bucket of lava can be used in a furnace to smelt 100 blocks.",
-    "loadingTip.legacyInfo": "You'll get the latest info on this game from minecraft.net!",
+    "loadingTip.legacyInfo": "You'll get the latest info on this game from our Discord!",
     "loadingTip.lightMelt": "Blocks that can be used as a light source will melt snow and ice. This includes torches, glowstone, and Jack O'Lanterns.",
     "loadingTip.minecart": "Get to destinations faster with a minecart and rail!",
     "loadingTip.mineconCalifornia": "Minecon 2016 was in Anaheim, California, USA!",
